# zip_viewer

./: README.md
ZipViewer/: .gitignore  CMakeLists.txt  MainWindow.cpp  MainWindow.h  ZipModel.cpp  ZipModel.h
ZipViewer/build_linux/: CMakeCache.txt  ZipViewer  cmake_install.cmake
